2002-02-07  Ian Lance Taylor  <ian@airs.com>

	* John Hughes: uuxqt.c (uqcleanup): Don't unlock the execution
	file until after it has been removed, to avoid a race which may
	lead to it's being executed twice.

	* unix/xqtsub.c (fsysdep_lock_uuxqt_dir): Call fclean_uuxqt_dir.
	(fsysdep_unlock_uuxqt_dir): Move directory cleaning code into
	fclean_uuxqt_dir, and call it.
	(fclean_uuxqt_dir): New static function.

	* unix/xqtsub.c (fsysdep_copy_uuxqt_files): Rename from
	fsysdep_move_uuxqt_files.  Remove fto parameter.  Use link instead
	of rename.  Don't bother moving files back on failure.
	* uuxqt.c (uqdo_xqt_file): Call fsysdep_copy_uuxqt_files rather
	than fsysdep_move_uuxqt_files.  Remove call to
	fsysdep_move_uuxqt_files after failure.
	* system.h (fsysdep_copy_uuxqt_files): Rename declaration from
	fsysdep_move_uuxqt_files.

	* Ignatios Souvatzis: uucp.texi (Execution File Format): Correct
	example of X. file.

	* uucp.c (uccopy): Add fforcelocal option.  Change all callers.

	* protz.c (fzwait): Remove unreachable return statement.

	* unix/lock.c (fsdo_lock): Test for error when removing read only
	stale lock file.

2002-02-06  Ian Lance Taylor  <ian@airs.com>

	* uuxqt.c (uqdo_xqt_file): Check for long versions of prohibited
	options.
	* uucp.c (asClongopts): Add comment indicating that changes here
	must be reflected in uuxqt.c.

	* MANIFEST, */MANIFEST: Remove.  These files are not used by
	automake.

	* uuconf/cnfnms.c: New file.
	* uuconf.h (struct uuconf_config_file_names): Define.
	(uuconf_config_files): Declare.
	* uuchk.c (main): Dump configuration file names.
	(ukshow_names): New static function.
	* uuconf/Makefile.am (libuuconf_a_SOURCES): Add cnfnms.c.
	* uuconf/Makefile.in: Rebuild.

2002-01-17  Ian Lance Taylor  <ian@airs.com>

	* Many files: Change types and add casts and attributes to avoid
	warnings.

	* uudefs.h: Use attribute macro in ulog declaration.

	* uucp.h: Add GCC attribute macros.
