@@ -1,3 +1,14 @@
+2002-02-08  Ian Lance Taylor  <ian@airs.com>
+
+	* unix/tcp.c: Use getaddrinfo if available to decide how to call
+	the socket functions.
+	* configure.in: Check for getaddrinfo and struct
+	sockaddr_storage.
+	* configure, config.h.in: Rebuild.
+
+	* unix/mkdirs.c (fsysdep_make_dirs): Correct error message in case
+	where we don't have permission to create the directory.
+
 2002-02-07  Ian Lance Taylor  <ian@airs.com>
 
 	* John Hughes: uuxqt.c (uqcleanup): Don't unlock the execution
